--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -3,6 +3,18 @@ body{
     position: relative;
 }
 
+@keyframes rotate {
+    0%{
+    transform: rotate(0deg);
+    }
+    50%{
+        transform: rotate(180deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
 .spinner{
     position: sticky;
 
@@ -120,16 +132,30 @@ body{
     overflow: hidden;
 }
 
-@keyframes rotate {
-    0%{
-    transform: rotate(0deg);
+@keyframes skeleton {
+    from{
+        background-color: #FFFFFF;
     }
-    50%{
-        transform: rotate(180deg);
-    }
-    100%{
-        transform: rotate(360deg);
+    to{
+        background-color: #CCCDCD;
     }
 }
 
+.image-container::after{
+    content: ' ';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    /* display: none; */
+    z-index: 100;
+
+    animation-name: skeleton;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+
+}
 
