--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,21 +1,23 @@
-body{
-    font-family:  "Roboto", Helvetica, Arial, sans-serif;
+body {
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
     position: relative;
 }
 
 @keyframes rotate {
-    0%{
-    transform: rotate(0deg);
+    0% {
+        transform: rotate(0deg);
     }
-    50%{
+
+    50% {
         transform: rotate(180deg);
     }
-    100%{
+
+    100% {
         transform: rotate(360deg);
     }
 }
 
-.spinner{
+.spinner {
     position: sticky;
 
     overflow: hidden;
@@ -35,7 +37,7 @@ body{
     align-items: center;
 }
 
-.spinner::after{
+.spinner::after {
     content: ' ';
 
     width: 5vw;
@@ -51,16 +53,19 @@ body{
 
     animation-name: rotate;
     animation-duration: 1s;
-    animation-iteration-count: infinite ;
+    animation-iteration-count: infinite;
 
 }
 
-.navbar{
+.bg-grey-color {
     background-color: #CCCDCD;
+}
+
+.navbar {
     transition: all 0.5s ease-in-out;
 }
 
-.sticky{
+.sticky {
     position: sticky;
     overflow: hidden;
     width: 100%;
@@ -69,22 +74,22 @@ body{
     z-index: 1000;
 }
 
-.menu{
+.menu {
     height: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
 
-.menu-ul{
+.menu-ul {
     list-style-type: none;
 }
 
-.menu-ul > li{
+.menu-ul>li {
     display: inline-block;
 }
 
-.menu-link{
+.menu-link {
     text-decoration: none;
     color: #6D6E71;
     /* color: #FEFFFE; */
@@ -93,12 +98,12 @@ body{
     font-weight: bold;
 }
 
-.menu-link:hover{
+.menu-link:hover {
     position: relative;
     color: #FEFFFE;
 }
 
-.menu-link:hover::after{
+.menu-link:hover::after {
     position: absolute;
     left: 0;
     bottom: 0;
@@ -108,25 +113,25 @@ body{
     transition: ease-in-out 0.5s all;
 }
 
-.title{
+.title {
     font-weight: bold;
 }
 
-.cover{
+.cover {
     aspect-ratio: 4/3;
     object-fit: cover;
 }
 
-.footer{
+.footer {
     background-color: #EFEFEF;
 }
 
-.mail{
+.mail {
     color: black;
 }
 
-@media (max-width: 765px){
-    .footer{
+@media (max-width: 765px) {
+    .footer {
         padding: 30px 0;
     }
 }
@@ -137,15 +142,16 @@ body{
 }
 
 @keyframes skeleton {
-    from{
+    from {
         background-color: #FFFFFF;
     }
-    to{
+
+    to {
         background-color: #CCCDCD;
     }
 }
 
-.image-container::after{
+.image-container::after {
     content: ' ';
     position: absolute;
     top: 0;
@@ -163,3 +169,8 @@ body{
 
 }
 
+.btn-warning,
+.bg-warning{
+    background-color: #FCD844 !important;
+    border: none;
+}
